--- a/LibraryApp/LibraryApp/Views/Biblioteca/EliminarPrestamo.cshtml
+++ b/LibraryApp/LibraryApp/Views/Biblioteca/EliminarPrestamo.cshtml
@@ -22,7 +22,7 @@
                     @using (Html.BeginForm())
             {
                         <label for="codigo"> Codigo del Prestamo </label>
-                        @Html.TextBoxFor(x => x.codigoPrestamo, new { @class = "form-control", @type = "number", @id = "codigo", @placeholder = "Ingrese el codigo del libro." })
+                        @Html.TextBoxFor(x => x.codigoPrestamo, new { @class = "form-control", @type = "number", @id = "codigo", @placeholder = "Ingrese el codigo del Prestamo." })
                         <br>
                         <input type="submit" class="btn-primary" value="Eliminar">
                     }
