--- a/LibraryApp/LibraryApp/Views/Biblioteca/AgregarPrestamo.cshtml
+++ b/LibraryApp/LibraryApp/Views/Biblioteca/AgregarPrestamo.cshtml
@@ -26,7 +26,7 @@
                         @Html.TextBoxFor(x => x.codigoSocio, new { @class = "form-control", @type = "number", @id = "codigoSocio", @placeholder = "Ingrese el Codigo del Socio" })
 
                         <label for="codigoLibro"> Codigo de Libro </label>
-                        @Html.TextBoxFor(x => x.codigoLibro, new { @class = "form-control", @type = "number", @id = "codigoLibro", @placeholder = "Ingrese el Codigo del Prestamo" })
+                        @Html.TextBoxFor(x => x.codigoLibro, new { @class = "form-control", @type = "number", @id = "codigoLibro", @placeholder = "Ingrese el Codigo del Libro" })
 
                         <label for="fechaPrestamo"> Fecha de Prestamo </label>
                         @Html.TextBoxFor(x => x.fechaReserva, new { @class = "form-control", @type = "datetime-local", @id = "fechaPrestamo", @placeholder = "Ingrese el Codigo del Prestamo" })
